welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:36: error: method end has return statement; needs result type
      return mur
      ^SnakeBuggle:42: error: method end has return statement; needs result type
      return mur
      ^SnakeBuggle:47: error: method end has return statement; needs result type
    return estFaceMur()
    ^